[package]
name = "prometheus-clightning-exporter"
version = "0.1.0"
authors = ["Martin Milata <martin@martinmilata.cz>"]
edition = "2018"
description = "Prometheus exporter for monitoring c-lightning node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3"
tokio = { version = "0.2", features = [ "rt-core", "uds", "time", "macros", "sync" ] }
tokio-util = "0.3"
hyper = "0.13"

stderrlog = "0.4"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

prometrics = "0.1"

clap = { version = "3.0.0-beta.1", default-features = false , features = [ "derive", "std", "cargo" ] }
